# Game-Of-Life-CXX20

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
